--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "element-plus": "^2.1.8",
+    "pinia": "^2.0.13",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0"
   },
